updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm still figuring this one out myself.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Asbury Park, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, hiking, digital painting, gaming, and annoying my siblings.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I don't dream of trading my life for money, but something that pays for travel and adding to my preposterous book hoard would be nice.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>In a van down by the river.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So Skynet will take me out first when the machines take over.</p>
     </section>
 
     <footer id="footer">
